display a thing on screen

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head></head>
     <body>
+        <div id="game"></div>
         <script src="build/main.js"></script>
         <script>console.log(main);</script>
     </body>
