--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            body {
+                margin : 0;
+                padding : 0;
+                background: black;
+            }
+        </style>
+    </head>
     <body>
         <div id="game"></div>
         <script src="build/main.js"></script>
