--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <body>
         <div id="game"></div>
         <script src="build/main.js"></script>
-        <script>console.log(main);</script>
+        <script>
+            window.onload = main;
+        </script>
     </body>
 </html>
