--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <html>
     <head>
         <style>
+            body, html {
+                min-height : 100%;
+                overflow: hidden;
+            }
             body {
                 margin : 0;
                 padding : 0;
-                background: black;
+                background: #999;
+            }
+
+            #game {
+                position:relative;
+                margin: 0 auto;
+                margin-top: -300px;
+                top : 50%;
+                width : 800px;
+                height : 600px;
+                box-shadow: 0px 0px 50px #000, 0px 0px 100px #000;
+                border-radius:5px;
+                overflow:hidden;
             }
         </style>
     </head>
