fix css of the page containing the game for firefox

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
                 margin : 0;
                 padding : 0;
                 background: #999;
+                height: 100%;
             }
 
             #game {
                 position:relative;
-                margin: 0 auto;
-                margin-top: -300px;
+                margin: -300px 0 0 -400px;
                 top : 50%;
+                left : 50%;
                 width : 800px;
                 height : 600px;
                 box-shadow: 0px 0px 50px #000, 0px 0px 100px #000;
